--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>Typemaster</title>
+    <title>Typemaster pre-launch landing page</title>
   </head>
   <body>
     <div class="inner">
