feat change home logo link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="inner">
       <header>
-        <a href="/"><img src="./assets/logo.svg" alt="logo" /></a>
+        <a href="/Typemaster-landing-page"><img src="./assets/logo.svg" alt="logo" /></a>
         <button class="navy">PRE-ORDER NOW</button>
       </header>
       <main>
